--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         // --- Firebase 初始化 ---
         let db = null;
         let auth = null;
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'flag-final-v4';
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'flag-final-demo-v1';
 
         const initFirebase = () => {
             if (typeof firebase !== 'undefined' && typeof __firebase_config !== 'undefined') {
@@ -78,20 +78,20 @@
             return user ? <MainApp user={user} /> : <LoginScreen />;
         }
 
-        // --- 完备的登录/注册组件 ---
+        // --- 演示版登录组件 (含模拟逻辑) ---
         function LoginScreen() {
-            const [mode, setMode] = useState('login'); // 'login' | 'register'
+            const [mode, setMode] = useState('login'); 
             const [email, setEmail] = useState('');
             const [password, setPassword] = useState('');
             const [isBusy, setIsBusy] = useState(false);
 
-            const handleAuth = async (e) => {
-                e.preventDefault();
-                if (!email || !password) return;
+            const performMockLogin = async () => {
                 setIsBusy(true);
+                // 模拟网络请求延迟：2秒
+                await new Promise(resolve => setTimeout(resolve, 2000));
                 try {
                     if (auth) {
-                        // 模拟登录逻辑
+                        // 使用 Firebase 匿名登录来维持 Session
                         await auth.signInAnonymously();
                     }
                 } catch (e) {
@@ -101,12 +101,14 @@
                 }
             };
 
-            const handleSocialLogin = async (type) => {
-                setIsBusy(true);
-                setTimeout(async () => {
-                    await auth.signInAnonymously();
-                    setIsBusy(false);
-                }, 800);
+            const handleAuth = (e) => {
+                e.preventDefault();
+                if (!email || !password) return;
+                performMockLogin();
+            };
+
+            const handleSocialLogin = () => {
+                performMockLogin();
             };
 
             return (
@@ -141,7 +143,7 @@
                             <button 
                                 type="submit"
                                 disabled={isBusy}
-                                className="w-full py-4 flag-gradient text-white rounded-2xl font-black shadow-lg shadow-red-100 active:scale-95 transition-all flex justify-center items-center"
+                                className="w-full py-4 flag-gradient text-white rounded-2xl font-black shadow-lg shadow-red-100 active:scale-95 transition-all flex justify-center items-center h-[56px]"
                             >
                                 {isBusy ? <div className="w-5 h-5 border-2 border-white/20 border-t-white rounded-full animate-spin"></div> : (mode === 'login' ? '登录' : '注册并开始')}
                             </button>
@@ -154,11 +156,11 @@
                         </div>
 
                         <div className="grid grid-cols-2 gap-3">
-                            <button onClick={() => handleSocialLogin('wechat')} className="flex items-center justify-center py-3 bg-slate-50 rounded-2xl text-slate-600 font-bold text-xs gap-2 active:scale-95 transition-all">
+                            <button onClick={handleSocialLogin} disabled={isBusy} className="flex items-center justify-center py-3 bg-slate-50 rounded-2xl text-slate-600 font-bold text-xs gap-2 active:scale-95 transition-all disabled:opacity-50">
                                 <svg width="18" height="18" fill="#07C160" viewBox="0 0 24 24"><path d="M8.5 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm7 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zM22 10.5c0-4.14-3.81-7.5-8.5-7.5S5 6.36 5 10.5c0 2.15 1.03 4.11 2.71 5.49L7 19l3.35-1.68c.51.13 1.03.2 1.65.2 4.69 0 8.5-3.36 8.5-7.52zm-12.25 8.7L7.5 20.5l.5-2.5c-2.4-1.7-4-4.2-4-7C4 6.4 8.5 3 14 3s10 3.4 10 8-4.5 8-10 8c-.7 0-1.4-.05-2.05-.15z"/></svg>
                                 微信
                             </button>
-                            <button onClick={() => handleSocialLogin('google')} className="flex items-center justify-center py-3 bg-slate-50 rounded-2xl text-slate-600 font-bold text-xs gap-2 active:scale-95 transition-all">
+                            <button onClick={handleSocialLogin} disabled={isBusy} className="flex items-center justify-center py-3 bg-slate-50 rounded-2xl text-slate-600 font-bold text-xs gap-2 active:scale-95 transition-all disabled:opacity-50">
                                 <svg width="16" height="16" viewBox="0 0 24 24"><path fill="#EA4335" d="M5.266 9.765A7.077 7.077 0 0 1 12 4.909c1.69 0 3.218.6 4.418 1.582L19.91 3C17.782 1.145 15.055 0 12 0 7.27 0 3.198 2.698 1.24 6.65l4.026 3.115z"/><path fill="#34A853" d="M16.04 18.013c-1.09.513-2.332.809-3.64.809-3.132 0-5.786-2.095-6.734-4.945l-4.04 3.125C3.582 20.94 7.518 24 12 24c3.086 0 5.86-1.114 7.96-2.968l-3.92-3.019z"/><path fill="#4285F4" d="M23.49 12.275c0-.825-.075-1.62-.215-2.385H12v4.515h6.44c-.28 1.505-1.125 2.78-2.4 3.635l3.92 3.02C22.25 19.115 24 15.935 24 12.275z"/><path fill="#FBBC05" d="M5.266 14.235l-4.026 3.115A11.932 11.932 0 0 1 0 12c0-1.92.445-3.73 1.24-5.35l4.026 3.115c-.215.655-.33 1.355-.33 2.085 0 .73.115 1.43.33 2.085z"/></svg>
                                 Google
                             </button>
